# wiki-graph-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: graph.html  index.html
examples/: yfinance_to_raw.py
raw/: 2026-04-08_CPO／矽光子與光通訊_yfinance_sample.json  2026-04-08_半導體_yfinance_sample.json  2026-04-08_散熱_yfinance_sample.json  2026-04-08_記憶體_yfinance_sample.json  2026-04-08_量子電腦_yfinance_sample.json  2026-04-08_電動車_yfinance_sample.json
wiki/: agent_ingest.py  batch_ingest.py  graph_builder.py  index.md  log.md  overview.md  test_agent_ingest.py  test_batch_ingest.py  test_graph_builder.py
wiki/concepts/: 主題：CPO／矽光子與光通訊.md  主題：半導體.md  主題：散熱.md  主題：記憶體.md  主題：量子電腦.md  主題：電動車.md  個股觀察.md  地區：China.md  地區：Hong Kong.md  地區：Netherlands.md  地區：Singapore.md  地區：Taiwan.md  地區：United Kingdom.md  地區：United States.md  地區：未知地區.md  子產業：Auto Manufacturers.md  子產業：Auto Parts.md  子產業：CPO／矽光子與光通訊.md  子產業：Communication Equipment.md  子產業：Computer Hardware.md  子產業：Electrical Equipment & Parts.md  子產業：Electronic Components.md  子產業：Information Technology Services.md  子產業：Internet Content & Information.md  子產業：Scientific & Technical Instruments.md  子產業：Semiconductor Equipment & Materials.md  子產業：Semiconductors.md  子產業：Specialty Industrial Machinery.md  產業：Communication Services.md  產業：Consumer Cyclical.md  產業：Industrials.md  產業：Technology.md  產業：未知產業.md
wiki/entities/: AAOI.md  AMD.md  ARM.md  ASE Technology Holding Co., Ltd..md  ASML Holding N.V..md  ASML.md  AVGO.md  Advanced Micro Devices, Inc..md  Alphabet Inc..md  Applied Optoelectronics, Inc..md  CIEN.md  (+67 more)
(+8 files in other folders)
